Update to the pointer API example

--- a/AV/Development/pointerExample.html
+++ b/AV/Development/pointerExample.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Linked Pointer Example</title>
-    <link rel="stylesheet" href="../css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
     <style>
     #container {
       width: 98%;
@@ -29,13 +29,13 @@
        src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="../lib/jquery.transform.light.js"></script>
-    <script src="../lib/raphael.js"></script>
-    <script src="../build/JSAV.js"></script>
+    <script src="../../JSAV/lib/jquery.transform.light.js"></script>
+    <script src="../../JSAV/lib/raphael.js"></script>
+    <script src="../../JSAV/build/JSAV.js"></script>
     <script>
   (function ($) {
     var jsav = new JSAV("container");
-	// Should move JSAV array 50px down to make room for pointer arrow canvas.
+    // Should move JSAV array 50px down to make room for pointer arrow canvas.
     var arr = jsav.ds.array([21,3,5,10,18,7],{indexed: true, top : 50, left:500,layout: "array"});
     jsav.umsg("We start by creating an array with 6 elements.");
     jsav.displayInit();
@@ -52,29 +52,28 @@
     arr.hide();
 
     jsav.step();
-	// Should move JSAV list 50px down to make room for pointer arrow canvas.
+    // Should move JSAV list 50px down to make room for pointer arrow canvas.
     var l = jsav.ds.list({top: 50, left: 450});
     jsav.umsg("We create a list and add some elements.");
     l.addFirst(5)
      .addFirst(4)
-	 .addFirst(3)
-	 .addFirst(2)
+     .addFirst(3)
+     .addFirst(2)
      .addFirst(1);
     l.layout();
-	jsav.step();
+    jsav.step();
     jsav.umsg("Add a pointer with the name \"pointer\" above the first node of the list.");
-	
-	var listPointer = jsav.pointer("pointer", l.get(0),{visible: true,
-                          anchor: "left top",
-                          myAnchor: "right bottom",
-                          left: 15,
-                          top: -20});
-	jsav.step();
-	jsav.umsg("Moves the pointer from the first node to the last node");
-	listPointer.target(l.get(4));
-	jsav.step(); 
+
+    var listPointer = jsav.pointer("pointer", l.get(0),{visible: true,
+                      anchor: "left top",
+                      myAnchor: "right bottom",
+                      left: 15,
+                      top: -20});
+    jsav.step();
+    jsav.umsg("Moves the pointer from the first node to the last node");
+    listPointer.target(l.get(4));
+    jsav.step(); 
     jsav.recorded();
-    
 }(jQuery));
     </script>
   </body>
