One bug of Pointer API.

--- a/AV/Development/pointerExample.html
+++ b/AV/Development/pointerExample.html
@@ -76,7 +76,10 @@
                       myAnchor: "right bottom",
                       left: 15,
                       top: -20});
+	listPointer2.arrow.css({"stroke":"yellow"});
+	l.get(2).edgeToNext().css({"stroke":"red"});
     jsav.step();
+	listPointer2.hide();
     jsav.umsg("Moves the pointer from the first node to the last node");
     listPointer1.target(l.get(4));
     jsav.step(); 
