--- a/AV/Development/pointerExample.html
+++ b/AV/Development/pointerExample.html
@@ -34,10 +34,31 @@
     <script src="../../JSAV/build/JSAV.js"></script>
     <script>
   (function ($) {
+
+    // Helper function for drawing arrow around the node
+    function arrowAround(node, options){
+      var jsav = node.jsav;
+      var nodeWidth = node.element.outerWidth();
+      var nodeHeight = node.element.outerHeight();
+      var nodegap = 40;
+      var nextnode = node.next();
+      if(nextnode){
+        nodegap = nextnode.element.offset().left - node.element.offset().left - nodeWidth;
+      }
+      var left = node.element.offset().left -    jsav.container.find(".jsavcanvas:first").offset().left;
+      var top = node.element.offset().top - jsav.container.find(".jsavcanvas:first").offset().top;
+      var opts = $.extend({leftOffset: nodegap/2,
+                            rightOffset: nodegap/2, topOffset: 15, nodeGap: nodegap, nodeWidth: nodeWidth, nodeHeight: nodeHeight}, options);
+      return jsav.g.polyline([[left - opts.nodeGap - 6, top + opts.nodeHeight/2], 
+      [left - opts.leftOffset, top + opts.nodeHeight/2], [left - opts.leftOffset, top - opts.topOffset],[left + opts.nodeWidth + opts.rightOffset, top - opts.topOffset],[left + opts.nodeWidth + opts.rightOffset, top + opts.nodeHeight/2],[left + opts.nodeWidth + opts.nodeGap + 1,top + opts.nodeHeight/2]],{"arrow-end":"classic-wide-long","stroke-width":2,"stroke-dasharray":"-"});
+    }
+
     var jsav = new JSAV("container");
     // Should move JSAV array 50px down to make room for pointer arrow canvas.
     var arr = jsav.ds.array([21,3,5,10,18,7],{indexed: true, layout: "array"});
 	arr.css({top : 50});
+
+
     jsav.umsg("We start by creating an array with 6 elements.");
     jsav.displayInit();
     jsav.umsg("Create a pointer for the element with index 1.");
@@ -63,6 +84,7 @@
      .addFirst(2)
      .addFirst(1);
     l.layout();
+
     jsav.step();
     jsav.umsg("Add two pointers, one with the name \"pointer1\" above the first node of the list, another with the name \"pointer2\" above the third node of the list,.");
 
@@ -76,13 +98,32 @@
                       myAnchor: "right bottom",
                       left: 15,
                       top: -20});
-	listPointer2.arrow.css({"stroke":"yellow"});
-	l.get(2).edgeToNext().css({"stroke":"red"});
+    listPointer2.arrow.css({"stroke":"yellow"});
+    l.get(2).edgeToNext().css({"stroke":"red"});
     jsav.step();
 	listPointer2.hide();
     jsav.umsg("Moves the pointer from the first node to the last node");
     listPointer1.target(l.get(4));
     jsav.step(); 
+
+    listPointer1.hide();
+    jsav.umsg("'arrowAround()' function is a helper function for drawing an arrow around a node. You can just make a copy of this function to the place you want to use it");
+    jsav.step();
+
+    jsav.umsg("Shows the arrow around the node with index 2 and hide the edges connecting to that node.");
+    l.get(1).edgeToNext().hide();
+    l.get(2).edgeToNext().hide();
+
+	// Create a arrow around the node with index 2.
+    var arrow = arrowAround(l.get(2));
+    jsav.step();
+
+    jsav.umsg("You can hide the arrow using the .hide() function.");
+    arrow.hide();
+	jsav.step();
+
+    jsav.umsg("You can show the arrow using the .show() function.");
+    arrow.show();
     jsav.recorded();
 }(jQuery));
     </script>
