Delete Min function

--- a/AV/Development/PrimAVPQ.html
+++ b/AV/Development/PrimAVPQ.html
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter">
-        <h1>Prim's Minimum Spanning Tree Algorithm</h1>
+        <h1>Prim's Minimum Spanning Tree Algorithm (Prioirity Queue Version)</h1>
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -30,7 +30,7 @@
       <input type="button" id="reset" name="reset" value="Reset" />
     </p>
   </form>
-  <div class="avcontainer" style="background-color:yellow;">
+  <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
